--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/vector-icons": "^14.0.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/material-top-tabs": "^6.6.13",
@@ -40,6 +40,7 @@
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
     "twrnc": "^4.3.0"
   },
