--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
     "react-native": "0.74.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.7",
-    "react-native-screens": "^3.32.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
+    "react-native-x-carousel": "^1.0.1",
     "twrnc": "^4.3.0"
   },
   "devDependencies": {
@@ -49,6 +50,7 @@
     "@expo/cli": "^0.18.21",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
